objects/AW_EventToWebserviceQueueFieldMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>AW_EventFieldName__c</fullName>
        <description>This field represents the Name of the event</description>
        <label>Event Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Service__c</fullName>
        <description>This is the service the event is associated with.</description>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_WebserviceCallQueueFieldName__c</fullName>
        <description>Web Service Call Queue Name</description>
        <label>Webservice Call Queue Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event To Webservice Queue Field Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>AW_EventFieldName__c</columns>
        <columns>DeveloperName</columns>
        <columns>AW_WebserviceCallQueueFieldName__c</columns>
        <columns>AW_Service__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Event To Webservice Queue Field Mappings</pluralLabel>
</CustomObject>